--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
+allure-python-commons==2.13.1
 async-generator==1.10
+atomicwrites==1.4.1
 attrs==22.2.0
-certifi==2022.12.7
+certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+colorama==0.4.6
+exceptiongroup==1.1.0
 h11==0.14.0
 idna==3.4
-iniconfig==1.1.1
+iniconfig==2.0.0
+lxml==4.9.2
+numpy==1.23.4
 outcome==1.2.0
-packaging==22.0
+packaging==23.0
 pluggy==1.0.0
+progress==1.6
 py==1.11.0
+pycparser==2.21
 PySocks==1.7.1
+pyTelegramBotAPI==4.10.0
 pytest==6.2.5
 pytest-base-url==2.0.0
 pytest-html==3.2.0
@@ -17,13 +27,16 @@ pytest-metadata==2.0.4
 pytest-selenium==4.0.0
 pytest-variables==2.0.0
 requests==2.28.1
-selenium==4.7.2
+selenium==4.8.3
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 tenacity==6.3.1
+termcolor==2.2.0
 toml==0.10.2
+tomli==2.0.1
+tqdm==4.64.1
 trio==0.22.0
-trio-websocket==0.9.2
-urllib3==1.26.13
+trio-websocket==0.10.2
+urllib3==1.26.12
 wsproto==1.2.0
